# tierarztpraxis-schaeuffelen-v2

./: Cargo.toml  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  index.html
src/: lib.rs  main.rs
src/components/: main_footer.rs  main_hero.rs  main_navigation_bar.rs  main_side_bar.rs  mod.rs
src/screens/: anfahrt.rs  bilder.rs  home.rs  impressum.rs  informationen.rs  leistungen.rs  mod.rs  not_found.rs  notfall.rs  page_not_found.rs  service_links.rs
src/services/: routing.rs
